Overflow fix on contact page image

--- a/app/globals.css
+++ b/app/globals.css
@@ -113,7 +113,3 @@ body {
 .flip {
   transform: scaleX(-1);
 }
-
-.bg-test {
-  background: linear-gradient(93deg, rgba(24, 24, 27, 0) 10%, rgba(139, 92, 246, 1) 70%);
-}
